--- a/views/panel/auth/register.ejs
+++ b/views/panel/auth/register.ejs
@@ -24,7 +24,7 @@
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" name="name" id="inputName" type="text" placeholder="Enter your name" required />
+                                                        <input class="form-control" name="name" id="inputName" type="text" min="3" max="20" placeholder="Enter your name" required />
                                                         <label for="inputName">Full Name</label>
                                                     </div>
                                                 </div>
@@ -52,7 +52,7 @@
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" name="ePassword" id="inputPasswordConfirm" type="password" placeholder="Confirm password" required />
+                                                        <input class="form-control" name="ePassword" id="inputPasswordConfirm" type="password" placeholder="Confirm password"  required />
                                                         <label for="inputPasswordConfirm">Confirm Password</label>
                                                     </div>
                                                 </div>
