--- a/views/website/home.ejs
+++ b/views/website/home.ejs
@@ -178,7 +178,7 @@
                                             
                                             <div class="single-place-wrap">
                                                 <div class="single-place-image">
-                                                    <img src="http://localhost:3001/<%=city.imgSrc%>" alt="place-image">
+                                                    <img src="/<%=city.imgSrc%>" alt="place-image">
                                                 </div>
                                                 <span class="single-place-title">
                                                     <%=city.name%>
