--- a/views/website/viewProperty.ejs
+++ b/views/website/viewProperty.ejs
@@ -226,28 +226,28 @@
                                     
                                     <div class="main-img">
                                         <img class="img-fluid"
-                                            src="http://localhost:3001/<%=property.imgSrc%>"
+                                            src="/<%=property.imgSrc%>"
                                             
                                             alt="ProductS">
                                         <div class="row my-3 previews">
                                             <div class="col-md-3">
                                                 <img class="w-100"
-                                                    src="http://localhost:3001/<%=property.imgSrc%>"
+                                                    src="/<%=property.imgSrc%>"
                                                     alt="Sale">
                                             </div>
                                             <div class="col-md-3">
                                                 <img class="w-100"
-                                                    src="http://localhost:3001/<%=property.imgSrc2%>"
+                                                    src="/<%=property.imgSrc2%>"
                                                     alt="Sale">
                                             </div>
                                             <div class="col-md-3">
                                                 <img class="w-100"
-                                                    src="http://localhost:3001/<%=property.imgSrc3%>"
+                                                    src="/<%=property.imgSrc3%>"
                                                     alt="Sale">
                                             </div>
                                             <div class="col-md-3">
                                                 <img class="w-100"
-                                                    src="http://localhost:3001/<%=property.imgSrc4%>"
+                                                    src="/<%=property.imgSrc4%>"
                                                     alt="Sale">
                                             </div>
                                         </div>
