--- a/views/panel/adminPanel/accounts.ejs
+++ b/views/panel/adminPanel/accounts.ejs
@@ -95,7 +95,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
-                            All Sellers
+                            Total Sellers count: <%=allUsers.length ?? 0%>
                         </div>
                         <div class="card-body">
                             <table id="datatablesSimple">
@@ -126,7 +126,7 @@
                                     <tr>
                                         <td> <div>
                                             <%if(user.imgSrc != ''){%>
-                                            <img class="card-img-top"height="40"  width= '40'  src="http://localhost:3001/<%=user.imgSrc%>"
+                                            <img class="card-img-top"height="40"  width= '40'  src="/<%=user.imgSrc%>"
                                             alt="profile image">
                                             <% }else{%>
                                                 <img class="card-img-top placeholder-glow"height="40"  width= '40'  src="/assets/img/noImage.png"
