--- a/views/panel/adminPanel/adminPanel.ejs
+++ b/views/panel/adminPanel/adminPanel.ejs
@@ -88,7 +88,7 @@
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Add New Property
                     </button>
-
+                  
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                         aria-hidden="true">
@@ -184,17 +184,25 @@
                         </div>
                     </div>
                     <!-- add model end -->
-                    <br><br>
-                     <h4 class="mt-4 mb-5"><strong>All Properties</strong></h4>
-
+                  
+                    <%if(properties.length == 0){%>
+                        <h4 class="mt-4 mb-5"><strong> You have <%=properties.length ?? 0%> Properties</strong></h4>
+                   
+                        <div class="center">
+                            <img src="https://i.pinimg.com/originals/89/b1/f5/89b1f56680b0e73e971ad8a818332312.png" width="100%" height="60%" alt="no properties alt" srcset="">
+                 
+                        </div>
+                        <%}else{%> 
+                            <br><br>
                     <div class="row" style="background-color: #eee;">
+                       
                         <%properties.forEach((property)=>{%>
                             <!-- new card design -->
                         
                                     <div class="col-lg-4 col-md-6 mb-4">
                                       <div class="card">
                                         <div class="bg-image hover-zoom ripple" data-mdb-ripple-color="light">
-                                          <img src="http://localhost:3001/<%=property.imgSrc%>"
+                                          <img src="/<%=property.imgSrc%>"
                                             class="w-100" width="100" height="250" />
                                           <a href="#!">
                                             <div class="mask">
@@ -249,10 +257,10 @@
                                                 </div>
                                                 <!-- body -->
                                                 <div class="modal-body">
-                                                    <img src="http://localhost:3001/<%=property.imgSrc%>" width="60px" height="60px" alt="property image">
-                                                    <img src="http://localhost:3001/<%=property.imgSrc2%>" width="60px" height="60px" alt="property image">
-                                                    <img src="http://localhost:3001/<%=property.imgSrc3%>" width="60px" height="60px" alt="property image">
-                                                    <img src="http://localhost:3001/<%=property.imgSrc4%>" width="60px" height="60px" alt="property image">
+                                                    <img src="/<%=property.imgSrc%>" width="60px" height="60px" alt="property image">
+                                                    <img src="/<%=property.imgSrc2%>" width="60px" height="60px" alt="property image">
+                                                    <img src="/<%=property.imgSrc3%>" width="60px" height="60px" alt="property image">
+                                                    <img src="/<%=property.imgSrc4%>" width="60px" height="60px" alt="property image">
                                                     <br>
                                                     <form action="/property/editProperty" method="post"
                                                         enctype="multipart/form-data">
@@ -410,6 +418,7 @@
                             <% });%>
 
                     </div>
+                    <%}%>
 
                 </div>
             </main>
