--- a/views/panel/adminPanel/allProperties.ejs
+++ b/views/panel/adminPanel/allProperties.ejs
@@ -95,7 +95,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
-                            All Properties List
+                            Total Properties Count: <%=allProperties.lenght ?? 0%>
                         </div>
                         <div class="card-body">
                             <table id="datatablesSimple">
@@ -125,7 +125,7 @@
                                             <td>
                                                 <div>
                                                     <%if(property.imgSrc != ''){%>
-                                                        <img class="card-img-top"height="40"  width= '40'  src="http://localhost:3001/<%=property.imgSrc%>"
+                                                        <img class="card-img-top"height="40"  width= '40'  src="/<%=property.imgSrc%>"
                                                         alt="profile image">
                                                         <% }else{%>
                                                             <img class="card-img-top placeholder-glow"height="40"  width= '40'  src="/assets/img/noImage.png"
