--- a/views/website/properties.ejs
+++ b/views/website/properties.ejs
@@ -163,7 +163,7 @@
                                             <div class="row">
                                                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                                                        <img src="http://localhost:3001/<%=property.imgSrc%>"
+                                                        <img src="/<%=property.imgSrc%>"
                                                             class="w-100" />
                                                         <a href="#!">
                                                             <div class="hover-overlay">
