--- a/views/website/home.ejs
+++ b/views/website/home.ejs
@@ -155,7 +155,7 @@
             <div class="popular-place-wrap v2">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12 mb-30">
+                        <!-- <div class="col-lg-6 col-md-6 col-sm-12 mb-30">
                             <a href="houses-for-sale-lahore">
                                 <div class="single-place-wrap">
                                     <div class="single-place-image">
@@ -168,13 +168,14 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                         <%cities.forEach((city)=>{%>
 
                             <% if(city.isEnabled){%>
-                                <div class="col-lg-6 col-md-6 col-sm-12 mb-30">
+                                <!-- <div class="col-lg-6 col-md-6 col-sm-12 mb-30"> -->
+                                <div class="col-lg-4 col-md-6 col-sm-12 mb-30">
                                     <a href="/city/<%=city.id%>">
-                                       
+                                   
                                             
                                             <div class="single-place-wrap">
                                                 <div class="single-place-image">
@@ -197,7 +198,7 @@
                                 <% }%>
                                     <% })%>
 
-                                        <div class="col-lg-6 col-md-6 col-sm-12 mb-30">
+                                        <!-- <div class="col-lg-6 col-md-6 col-sm-12 mb-30">
                                             <a href="houses-for-sale-islamabad">
                                                 <div class="single-place-wrap">
                                                     <div class="single-place-image">
@@ -226,8 +227,8 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-sm-12 mb-30">
+                                        </div> -->
+                                        <!-- <div class="col-lg-4 col-md-6 col-sm-12 mb-30">
                                             <a href="for-sale/houses/in-rawalpindi-4/">
                                                 <div class="single-place-wrap">
                                                     <div class="single-place-image">
@@ -241,7 +242,7 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                        </div>
+                                        </div> -->
                                         <!-- <div class="col-lg-4 col-md-6 col-sm-12 mb-30">
                             <a href="for-sale/houses/in-peshawar-68/">
                                 <div class="single-place-wrap">
