--- a/views/website/viewProperty.ejs
+++ b/views/website/viewProperty.ejs
@@ -127,33 +127,33 @@
                             <div class="col-lg-2 col-md-5 col-sm-5 col-4 order-2 order-xl-1 order-lg-1 order-sm-2 order-md-2"
                                 id="logo">
                                 <a class="navbar-brand" href="/">
-                                    <p style="display:inline-block"><img src="/assets/img/logo.png"
+                                    <p style="display:inline-block"><img src="assets/img/logo.png"
                                             style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
                                             alt="logo" class="img-fluid">
-                                        <h3 style="color:black;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                        <h3 style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
                                     </p>
                                 </a>
                             </div>
                             <div
                                 class="col-lg-5 col-md-1 col-sm-1 col-2 order-1 order-xl-2 order-lg-2 order-sm-1 order-md-1">
                                 <nav class="site-navigation text-left">
-                                    <div class="container">
+                                    <!-- <div class="container">
                                         <ul class="site-menu js-clone-nav d-none d-lg-block">
                                             <li>
-                                                <a href="/" class='active text-dark'>Home</a>
+                                                <a href="/" class='active'>Home</a>
                                             </li>
                                             <li>
-                                                <a href="/to-rent/" class="text-dark">About</a>
+                                                <a href="/to-rent/">About</a>
                                             </li>
                                             <li>
-                                                <a href="/maps/" class="text-dark">Blog</a>
+                                                <a href="/maps/">Blog</a>
                                             </li>
                                             <li>
-                                                <a href="/register" class="text-dark">Sell</a>
+                                                <a href="/register">Sell</a>
                                             </li>
 
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </nav>
                                 <div class="d-lg-none sm-left">
                                     <a href="#" class="mobile-bar js-menu-toggle">
@@ -176,8 +176,8 @@
                                                 class="lnr lnr-user"></i> &nbsp;</a>
                                     </li>
                                     <li>
-                                        <a class="btn v6 "  href="/login" id="login-icon-btn">Post Property
-                                            <span class="text-dark">Free</span></a>
+                                        <a class="btn v6" href="/login" id="login-icon-btn">Post Property
+                                            <span>Free</span></a>
                                     </li>
                                 </ul>
                             </div>
@@ -417,23 +417,28 @@
                 <div class="row nav-folderized">
                     <div class="col-lg-4 col-md-12">
                         <div class="footer-logo">
-                            <a href="/"> <img src="/assets/1e23d7f5/rp-whit-n-green-logo.png" width="149" height="138"
-                                    alt="logo"></a>
+                            <a class="navbar-brand" href="/">
+                                <p style="display:inline-block"><img src="assets/img/logo.png"
+                                        style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
+                                        alt="logo" class="img-fluid">
+                                    <h3 style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                </p>
+                            </a>
                             <div class="company-desc">
                                 <h3>
-                                    Realproperty.pk - Pakistan's best free property listings website.
+                                    ZameenLo.glitch.me - Pakistan's best free property listings website.
                                     <span> Trusted place to investing, renting, buying &amp; selling online. </span>
                                 </h3>
                                 <div class="footer-social-wrap">
                                     <p>Follow us on </p>
                                     <ul class="social-buttons style2">
-                                        <li><a href="https://www.facebook.com/realproperty.pk" target="_blank"><i
+                                        <li><a href="#" target="_blank"><i
                                                     class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="https://twitter.com/realpropertypk" target="_blank"><i
+                                        <li><a href="#" target="_blank"><i
                                                     class="fab fa-twitter"></i></a></li>
-                                        <li><a href="https://www.pinterest.com/realpropertypk" target="_blank"><i
+                                        <li><a href="#" target="_blank"><i
                                                     class="fab fa-pinterest-p"></i></a></li>
-                                        <li><a href="https://pk.linkedin.com/company/realproperty-pk/"
+                                        <li><a href="#"
                                                 target="_blank"><i class="fab fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
@@ -441,26 +446,10 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-12 text-center sm-left">
-                        <div class="footer-content nav">
-                            <h2 class="title">Quick Links Searches</h2>
-                            <ul class="list res-list">
-                                <li><a class="link-hov style2" href="/to-rent/">Property for Rent</a></li>
-                                <li><a class="link-hov style2" href="/">Property for Sale</a></li>
-                                <li><a class="link-hov style2" href="/maps/">Society Maps</a></li>
-                                <li><a class="link-hov style2" href="/blog/">News & Guide</a></li>
-                            </ul>
-                        </div>
+                    
                     </div>
                     <div class="col-lg-2 col-md-12 text-center sm-left">
-                        <div class="footer-content nav">
-                            <h2 class="title">Company</h2>
-                            <ul class="list res-list">
-                                <li><a class="link-hov style2" href="/about.html"> About us</a></li>
-                                <li><a class="link-hov style2" href="/contact.html">Contact us</a></li>
-                                <li><a class="link-hov style2" href="/terms.html">Privacy Policy</a></li>
-                                <li><a class="link-hov style2" href="/rent-sell-property-free/">Place Free Ad</a></li>
-                            </ul>
-                        </div>
+                    
                     </div>
                     <div class="col-lg-3 col-md-12">
                         <div class="footer-content">
@@ -470,7 +459,7 @@
                                     <div class="icon">
                                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     </div>
-                                    <div class="text">1st Floor Habib Tower, Main Boulevard Valencia Town, Lahore
+                                    <div class="text">1st Floor Habib Tower, Main Boulevard Valencia Town, Bhakkar
                                     </div>
                                 </li>
                                 <li class="contact-info">
@@ -478,14 +467,14 @@
                                         <i class="fa fa-envelope" aria-hidden="true"></i>
                                     </div>
                                     <div class="text"><a href="#"><span class="__cf_email__"
-                                                data-cfemail="741d1a121b340611151804061b041106000d5a041f">[email&#160;protected]</span></a>
+                                              >zameenlo@gmail.com</span></a>
                                     </div>
                                 </li>
                                 <li class="contact-info">
                                     <div class="icon">
                                         <i class="fa fa-phone" aria-hidden="true"></i>
                                     </div>
-                                    <div class="text">+92 320 145 00 92</div>
+                                    <div class="text">+92 345 583 25 70</div>
                                 </li>
                             </ul>
                         </div>
@@ -498,7 +487,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-8 offset-md-2">
                         <p>
-                            &copy;RealProperty.pk 2023. All rights reserved. </p>
+                            &copy;Zameenlo 2023. All rights reserved. </p>
                     </div>
                 </div>
             </div>
@@ -506,56 +495,6 @@
     </div>
 
 
-    <div class="modal fade" id="property-area-popup">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Change Area</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true"><i class="lnr lnr-cross"></i></span></button>
-                </div>
-                <div class="modal-body">
-                    <div class="modal-body">
-                        <ul class="area-unit-box">
-                            <li data-val="1" value="Marla"> Marla</li>
-                            <li data-val="2" value="Kanal"> Kanal</li>
-                            <li data-val="4" value="Sq.Ft."> Square Feet</li>
-                            <li data-val="5" value="Sq.Yd."> Square Yards</li>
-                            <li data-val="6" value="Sq.M."> Square Meters</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="login_alert">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-
-                    <div class="user-login-section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="alert-popup-body">
-                                        <span class="lnr lnr-checkmark-circle"></span>
-                                        <h3></h3>
-                                        <p> </p>
-                                        <div class="res-box text-center mt-30">
-                                            <button type="button" class="btn v8 close" data-dismiss="modal"
-                                                aria-label="Close"><span class="lnr lnr-exit"></span> OK</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     <div class="modal fade" id="user-login-popup">
@@ -577,8 +516,8 @@
                                                 aria-selected="true" id="login-btn">Login</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" data-toggle="tab" data-href="#register" role="tab"
-                                                aria-selected="false" id="register-btn">Register</a>
+                                            <a class="nav-link" 
+                                               href="/register">Register</a>
                                         </li>
                                     </ul>
                                     <div class="login-wrapper">
@@ -803,6 +742,7 @@
             </div>
         </div>
     </div>
+
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script type="text/javascript" src="/assets/js-compress/ec645df194ecd0fda19e76bed511bfdb.js?v=1664360743"></script>
