--- a/views/panel/auth/login.ejs
+++ b/views/panel/auth/login.ejs
@@ -42,6 +42,7 @@
                                     </div>
                                     <div class="card-footer text-center py-3">
                                         <div class="small"><a href="/register">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="/">Go back to home</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -53,7 +54,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                            <div class="text-muted">Copyright &copy; zameenlo 2023</div>
                             <div>
                                 <a href="#">Privacy Policy</a>
                                 &middot;
