--- a/views/panel/auth/register.ejs
+++ b/views/panel/auth/register.ejs
@@ -64,6 +64,7 @@
                                     </div>
                                     <div class="card-footer text-center py-3">
                                         <div class="small"><a href="/login">Have an account? Go to login</a></div>
+                                        <div class="small"><a href="/">Go back to home</a></div>
                                     </div>
                                 </div>
                             </div>
