--- a/views/website/viewProperty.ejs
+++ b/views/website/viewProperty.ejs
@@ -119,18 +119,18 @@
 
 <body>
     <div class="page-wrapper">
-        <header class="header transparent scroll-hide">
-            <div class="site-navbar-wrap v1">
+        <header class="header " >
+            <div class="site-navbar-wrap v1" >
                 <div class="container">
                     <div class="site-navbar">
                         <div class="row align-items-center">
                             <div class="col-lg-2 col-md-5 col-sm-5 col-4 order-2 order-xl-1 order-lg-1 order-sm-2 order-md-2"
                                 id="logo">
                                 <a class="navbar-brand" href="/">
-                                    <p style="display:inline-block"><img src="assets/img/logo.png"
+                                    <p style="display:inline-block"><img src="/assets/img/logo.png"
                                             style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
                                             alt="logo" class="img-fluid">
-                                        <h3 style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                        <h3 class="remove-logo" style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
                                     </p>
                                 </a>
                             </div>
@@ -172,11 +172,9 @@
                             <div class="d-lg-none col-md-6 col-sm-6 order-md-3 order-sm-3 col-6 order-3 text-right"
                                 id="mobile-right-nav">
                                 <ul class="user-btn v2">
-                                    <li><a data-toggle="modal" data-target="#user-login-popup" id="login-icon-btn"><i
-                                                class="lnr lnr-user"></i> &nbsp;</a>
-                                    </li>
+                                   
                                     <li>
-                                        <a class="btn v6" href="/login" id="login-icon-btn">Post Property
+                                        <a class="btn v6" href="/login"  id="login-icon-btn">Post Property
                                             <span>Free</span></a>
                                     </li>
                                 </ul>
@@ -185,9 +183,7 @@
                                 <div class="menu-btn">
 
                                     <ul class="user-btn v2">
-                                        <li><a data-toggle="modal" data-target="#user-login-popup"
-                                                id="login-icon-btn"><i class="lnr lnr-user"></i></a>
-                                        </li>
+                                        
                                     </ul>
                                     <div class="add-list float-right ml-3">
                                         <a class="btn v6" href="/login">Post Property <span>Free</span> </a>
